--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,7 @@ services:
     environment:
       - SECRET_KEY
       - DATABASE_URL=${DATABASE_URL-}
+#      - REDIS_URL=${REDIS_URL-}
       - REDIS_URL=${REDIS_URL-redis://redis:6379}
       - NTA_API_KEY
       - AWS_ACCESS_KEY_ID
@@ -40,9 +41,9 @@ services:
       options:
         max-size: "5m"
         max-file: "3"
-    mem_limit: 12288m
+    mem_limit: 6144m
     command: [
       "redis-server",
-      "--maxmemory", "11gb",
+      "--maxmemory", "5gb",
       "--maxmemory-policy", "allkeys-lru"
     ]
