--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,4 +1,4 @@
-name: timesbus.org
+name: transportthing.uk
 
 on:
   push:
@@ -25,8 +25,36 @@ jobs:
     - run: npm test
     - run: npm run build
 
+    - uses: tailscale/github-action@v3
+      with:
+        authkey: ${{ secrets.TS_AUTHKEY }}
+        tags: tag:prod
+        version: latest
+        statedir: /tmp/tailscale-state/
+        cache: true
+
     - uses: actions/upload-artifact@v4.4.3
       with:
         name: dist
         path: busstops/static
         if-no-files-found: error
+
+    - uses: docker/setup-qemu-action@v3
+    - uses: docker/setup-buildx-action@v3
+
+    - name: Login to GitHub Container Registry
+      uses: docker/login-action@v3
+      with:
+        registry: ghcr.io
+        username: ${{ github.repository_owner }}
+        password: ${{ secrets.GITHUB_TOKEN }}
+        cache: true
+        
+    - name: Build and push container to GHCR
+      uses: docker/build-push-action@v5
+      with:
+          context: .
+          platforms: linux/amd64
+          push: true
+          tags: |
+              ghcr.io/transportthing/transportthing.uk:latest
