add the git pull (not technically needed, but *shrug*)

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -71,3 +71,15 @@ jobs:
           push: true
           tags: |
               ghcr.io/transportthing/transportthing.uk:latest
+    - name: Pull the latest git code
+      run: |
+        ssh -o "StrictHostKeyChecking no" root@baldrick "
+          cd /svcs/transportthing.uk
+          git pull
+        "
+    - name: Pull the latest docker image to baldrick (TT Host)
+      run: |
+        ssh -o "StrictHostKeyChecking no" root@baldrick "
+          cd /svcs/tt-web
+          docker compose pull
+        "
